[package]
name = "nft_happybits"
version = "0.1.0"
authors = ["monocrowd <monocrowd@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { git="https://github.com/near/near-sdk-rs", package = "near-sdk", tag="4.0.0-pre.3" }
near-contract-standards = { git="https://github.com/near/near-sdk-rs", package = "near-contract-standards", tag="4.0.0-pre.3" }


[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[workspace]
members = []
